tests/fail/invalid_method_call.rs
use gpui_markup::ui;

fn main() {
    // Should fail: method call without parentheses
    let _ = ui! {
        <div>
            {.flex}
        </div>
    };
}
