tests/fail/invalid_method_call.stderr
error: unexpected end of input, expected parentheses
 --> tests/fail/invalid_method_call.rs:7:19
  |
7 |             {.flex}
  |                   ^
